<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
    <name>leo_slam_toolbox</name>
    <version>0.0.0</version>
    <description>This package contains a ROS2 leo_slam_toolbox</description>
    <author>Brian Gerkey</author>
    <maintainer email="litian.zhuang@nxrobo.com">litian.zhuang</maintainer>
    <license>CreativeCommons-by-nc-sa-2.0</license>

    <url>http://ros.org/wiki/gmapping</url>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>std_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>tf2</depend>
    <depend>tf2_ros</depend>
    <depend>tf2_geometry_msgs</depend>
    <depend>message_filters</depend>
    <depend>rclcpp</depend>
    <depend>sensor_msgs</depend>
    <depend>visualization_msgs</depend>


    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
