<?xml version="1.0"?>
<package format="3">
  <name>aubo_C3_moveit_resources</name>
  <author email="zhd172@gmail.com">ZhangDuo</author>
  <maintainer email="zhd172@gmail.com">ZhangDuo</maintainer>
  <version>0.0.0</version>
  <description>
    <p>
      MoveIt Resources for working with: Ufactory aubo_C3 robot.
    </p>
  </description>
  <license>BSD</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>moveit_resources_aubo_C3_description</exec_depend>
  <exec_depend>moveit_resources_aubo_C3_moveit_config</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <export>
      <build_type>ament_cmake</build_type>
  </export>
</package>
